--- a/tictactoe.css
+++ b/tictactoe.css
@@ -11,14 +11,14 @@ body {
     align-items: center;
   }
   
-  .game {
+  .game {                 
     height: 60vmin;
     width: 60vmin;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; /* to bring box under one another */
     justify-content: center;
     align-items: center;
-    gap: 1.5vmin;
+    gap: 1.5vmin;   /* vmin is 1% view */
   }
   
   .box {
@@ -27,7 +27,7 @@ body {
     border-radius: 1rem;
     border: none;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
-    font-size: 8vmin;
+    font-size: 8vmin;   /* size of x,o */
     color: #b03e3e;
     background-color: #ffffc7;
   }
